--- a/qecto-frontend/package.json
+++ b/qecto-frontend/package.json
@@ -11,13 +11,19 @@
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.12.0",
+    "maplibre-gl": "^5.5.0",
     "normalize": "^0.3.1",
+    "point-in-polygon": "^1.1.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "sass": "^1.89.0",
     "vazirmatn": "^33.0.3",
     "web-vitals": "^2.1.4"
