--- a/qecto-frontend/package.json
+++ b/qecto-frontend/package.json
@@ -15,8 +15,10 @@
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.4.9",
+    "framer-motion": "^12.15.0",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.511.0",
     "mapbox-gl": "^3.12.0",
     "maplibre-gl": "^5.5.0",
     "normalize": "^0.3.1",
