create requests page fix projects list redesign dashboard page fix api

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,7 @@
       "args": ["/k", ".\\env\\Scripts\\activate.bat"]
     }
   },
+  "html-css-class-completion.enableEmmetSupport": true
   // "javascript.preferences.importModuleSpecifier": "relative",
   // "typescript.preferences.importModuleSpecifier": "relative"
 }
