--- a/qecto-frontend/package.json
+++ b/qecto-frontend/package.json
@@ -22,8 +22,8 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
     "mapbox-gl": "^3.12.0",
-    "maplibre-gl": "^5.5.0",
-    "moment-jalaali": "^0.9.2",
+    "maplibre-gl": "^5.6.0",
+    "moment-jalaali": "^0.10.4",
     "normalize": "^0.3.1",
     "point-in-polygon": "^1.1.0",
     "react": "^19.1.0",
@@ -37,6 +37,7 @@
     "react-toastify": "^11.0.5",
     "react-transition-group": "^4.4.5",
     "recharts": "^2.15.3",
+    "tailwindcss": "^3.4.17",
     "vazirmatn": "^33.0.3",
     "web-vitals": "^2.1.4"
   },
@@ -68,9 +69,9 @@
     "autoprefixer": "^10.4.21",
     "css-loader": "^7.1.2",
     "postcss": "^8.5.4",
+    "postcss-cli": "^11.0.1",
     "sass": "^1.89.1",
     "sass-loader": "^16.0.5",
-    "style-loader": "^4.0.0",
-    "tailwindcss": "^4.1.8"
+    "style-loader": "^4.0.0"
   }
 }
