--- a/qecto-frontend/package.json
+++ b/qecto-frontend/package.json
@@ -35,7 +35,8 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.6.1",
+    "react-multi-date-picker": "^4.5.2",
+    "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "react-transition-group": "^4.4.5",
