--- a/qecto-frontend/package.json
+++ b/qecto-frontend/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-markdown": "^10.1.0",
     "react-multi-date-picker": "^4.5.2",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
