--- a/.gitignore
+++ b/.gitignore
@@ -5,15 +5,15 @@
 *.log
 *.pot
 *.pyc
-__pycache__/
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-media
+qecto/__pycache__/
+qecto/local_settings.py
+qecto/db.sqlite3
+qecto/db.sqlite3-journal
+qecto/media
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
-# <django-project-name>/staticfiles/
+qecto/staticfiles/
 
 ### Django.Python Stack ###
 # Byte-compiled / optimized / DLL files
